src/styles/parts/global.scss
*,
*:before,
*:after {
  box-sizing: border-box;
  @include no-highlights-on-tap; //disable default blue background on tap
}

html {
  -ms-overflow-style: scrollbar;
}

body {
  position: relative;
  min-width: 320px;
  min-height: 100vh;
  font-family: $font-family-primary;
  font-size: $font-size-base;
  line-height: $line-height-base;
  color: $color-primary;
  -ms-overflow-style: scrollbar;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/**
 * Default values for heading tags in k6 project, moved from
 * Heading component
**/

h1,
h2,
h3,
h4,
h5,
h6 {
  font-size: 30px;
  line-height: 40px;
  font-weight: 400;
  margin: 0;
  @include md-down {
    h1 {
      font-size: 25px;
      line-height: 30px;
    }
  }
}

a,
button,
input,
img,
video {
  outline: none;
  &:-moz-focusring {
    outline: none;
    border: none;
  }
  &:-moz-focus-inner {
    outline: none;
    border: none;
  }
}

.link {
  position: relative;
  text-decoration: none;
  color: $color-accent-primary;
  font-weight: 500;
  transition: 0.3s all;
  outline: none;
  font-size: inherit;
  line-height: inherit;
  cursor: pointer;
  padding-bottom: 1px;
  border-bottom: 1px solid rgba($color-accent-primary, 0);
  transition: all 0.3s;
  &:hover {
    border-bottom: 1px solid rgba($color-accent-primary, 0.5);
  }
  // to treat links delivered to ui from json at pricing/faq
  &--faq {
    font-weight: 400;
  }
}

body .show-md-down {
  @include md-down {
    display: initial;
  }
  @media only screen and (min-width: 992px) {
    display: none;
  }
}

body .hide-md-down {
  @include md-down {
    display: none;
  }
  @media only screen and (min-width: 992px) {
    display: initial;
  }
}

